// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead two - portrait - 768 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={768}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.751937984496124%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "67.10271317829458%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`2. front lead two - portrait - 810 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={810}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.785388127853885%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "67.07762557077626%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`3. front lead two - portrait - 834 - 0.75 ratio 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={834}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.785388127853885%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "67.07762557077626%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`4. front lead two - portrait - 834 - less than 0.75 ratio 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={834}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.785388127853885%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "67.07762557077626%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`5. front lead two - portrait - 1024 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={1024}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.89855072463767%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "66.99275362318839%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`6. front lead two - landscape - 1024 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={1024}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.90960451977401%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "42.487641242937855%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "paddingLeft": 10,
            "width": "24.390889830508474%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`7. front lead two - landscape - 1080 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={1080}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.93333333333333%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "42.44166666666666%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "paddingLeft": 10,
            "width": "24.425%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`8. front lead two - landscape - 1112 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={1112}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "32.93333333333333%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "42.44166666666666%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "paddingLeft": 10,
            "width": "24.425%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`9. front lead two - landscape - 1366 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={1366}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "36.068580542264755%",
          },
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "width": "46.20414673046252%",
          },
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "paddingLeft": 10,
            "width": "17.5518341307815%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;
